Etapa 4 - Filtrar Platos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="Item_Registrame">Registrarme</string>
     <string name="Item_Crear">Crear Item</string>
     <string name="Item_Listar">Listar Items</string>
+    <string name="Buscar_Plato">Buscar Plato</string>
 
     <string name="Item_Volver">Home</string>
 
